# srv

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  diagnostics.txt  windows-diagnostics.txt
.github/workflows/: ci.yml  diagnostics.yml  finalize-metadata.yml  release.yml  windows-diagnostics.yml
src/: backend.rs  cli.rs  directory.rs  main.rs  output.rs  policy.rs  reload.rs
