[package]
name = "srv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast native static file server with instant LAN sharing"
repository = "https://github.com/jafupy/srv"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["static", "server", "lan", "development", "cli"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
cap-std = "4.0.2"
clap = { version = "4.6.1", features = ["derive", "env"] }
local-ip-address = "0.6.13"
notify = "8.2.0"
percent-encoding = "2.3.2"
qrcode = { version = "0.14.1", default-features = false }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.7.0", features = ["fs"] }
tower-livereload = "0.10.3"
